Fix overflow in code snippers (I hope)

--- a/themes/stepmania/css/style.css
+++ b/themes/stepmania/css/style.css
@@ -413,6 +413,7 @@ footer p {
       margin-left: 28px;
       list-style-type: disc; }
     .forum-post .user-content .codesnippet {
+      overflow: auto;
       font-family: monospace;
       white-space: pre; }
       .forum-post .user-content .codesnippet br {
