--- a/themes/stepmania/src/_forum.scss
+++ b/themes/stepmania/src/_forum.scss
@@ -262,6 +262,8 @@
 			list-style-type: disc;
 		}
 		.codesnippet {
+			overflow: auto;
+//			margin-bottom: $spacing;
 			font-family: monospace;
 			white-space: pre;
 			br { display: none; }
